--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: open-sans;
+  src: url("../font/OpenSans-Regular.ttf");
+}
+
+body {
+  font-family: open-sans;
+
+}
+
 
 
 /*==== NAV ===== */
@@ -21,8 +31,8 @@
 .navbar ul {
   display: flex;
   align-items: center;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   list-style: none;
   height: 70px;
 }
